@@ -74,6 +74,7 @@ xine-lib (1.1.17) 2009-??-??
   * Enable libmpeg2new. This is not yet production code; the old mpeg2
     decoder remains the default.
   * Fix a broken size check in the pvr input plugin (ref. CVE-2008-5239).
+  * More malloc checking (ref. CVE-2008-5240).
 
 xine-lib (1.1.16.1) 2009-01-11
   * Fix build with older ffmpeg, both internal and in Debian 5.0.
